--- a/index.html
+++ b/index.html
@@ -116,23 +116,17 @@
                         En general, los seres humanos, nos especializamos en quejarnos de los resultados e insistir una y otra vez recorriendo el
 			mismo camino, con lo cual generalmente obtenemos los mismos resultados.
 			<br><br>
-			<div class="text-fade collapsible-fade has-fade">Obviamente la primera cosa a definir es ¿qué resultado busco alcanzar?, y está bueno preguntarnos ¿para qué?, ¿qué me va a
-			aportar alcanzar este resultado?; y, ¿este aporte es bueno para mí y para las personas de mi entorno?, ¿dispongo de las
-			capacidades y recursos necesarios para alcanzarlo?.</div>
+			<div class="text-fade collapsible-fade has-fade">Partiendo de responder a preguntas como: ¿qué resultado busco alcanzar?, ¿para qué?, ¿qué me va a aportar alcanzar este resultado?; y, ¿este aporte es bueno para mí y para las personas de mi entorno?, ¿dispongo de las capacidades y recursos necesarios para alcanzarlo?</div>
 			
-			<div class="collapsible-content">Estas preguntas aparentemente simples, resultan muy poderosas a la hora de analizar si lo que busco es “razonable”.
-			
-			Si lo es, esto es, si el resultado buscado aporta crecimiento personal y, mejora (o cuando menos no daña) a mi entorno, y si
-			dispongo de las capacidades y recursos necesarios para alcanzarlo, entonces, resta definir caminos, opciones
-			para lograrlo.
-
-			Cada camino presenta riesgos, oportunidades y desafíos, y por lo tanto enseñanzas posibles. Para emprender el camino, puedo
-			considerar todos estos elementos en mayor o menor profundidad, pero más tarde o más temprano deberé abandonar mi “zona
-			de confort” y lanzarme a recorrer un camino desconocido o algo conocido, porque cuando se recorre el mismo camino por
-			segunda vez, la vida suele prepararnos algunos cambios, para aprender aún de lo conocido.
-			Si el camino me lleva al resultado esperado bien, en caso contrario es bueno sentarse, recopilar experiencias aprendidas durante este viaje, y
-			plantearnos nuevas opciones para llegar. Lo importante es no seguir insistiendo por un camino que ya sabemos no conduce a
-			los resultados deseados, y estar abiertos a explorar nuevas opciones.
+			<div class="collapsible-content">
+			Puedo analizar si lo que busco es “razonable”.
+			 Si lo es, y si dispongo de las capacidades y recursos necesarios para alcanzarlo, entonces, resta definir caminos,
+			  opciones para lograrlo. Cada opción presenta riesgos, oportunidades y desafíos, y por lo tanto enseñanzas posibles.
+			   Para emprender el camino, más tarde o más temprano deberé abandonar mi “zona de confort” y lanzarme a recorrerlo.
+			    Si el camino me lleva al resultado esperado bien, en caso contrario es deseable sentarse,
+			     recopilar experiencias aprendidas durante este viaje y plantearnos nuevas opciones para llegar.
+			      Lo importante es no seguir insistiendo por un camino que ya sabemos no conduce a los resultados esperados,
+			       y estar abiertos a explorar nuevas opciones. 
 			</div>
 			<button class="collapsible-bottom">Leer más...</button></span>
         </div>
