Cambios de estilo y link GADE

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 </li>
             </ul>
             <span class="color-black">Me desempeño como Consultor en gestión de empresas, Auditor en sistemas de gestión, Facilitador de grupos de
-		    empresarios con la metodología GADE.</span>
+		    empresarios con la <a href="https://www.acde.org.uy/gade" target="_blank">metodología GADE.</a></span>
         </div>
     </section>
     <hr class="m-0">
