Fixed whatsapp stuff

--- a/index.html
+++ b/index.html
@@ -517,7 +517,11 @@
 			  <textarea name="text" class="feedback-input" placeholder="Propuesta, consulta..."></textarea>
 			  <input type="submit" value="ENVIAR"/>
 			  <br><br>
-    		  <div class="wpp-contact"><span class="fab fa-whatsapp"></span> <b>099 617 172</b> <a href="https://wa.me/59899617172?text=Quiero%20contactarme%20contigo.">Contáctame en WhatsApp</a></div>
+    		  <div class="wpp-contact">
+	    		  <div class="wpp-number"><span class="fab fa-whatsapp"></span> <b>099 617 172</b></div>
+	    		  <b><a href="https://wa.me/59899617172?text=Quiero%20contactarme%20contigo."><br><span class="fab fa-whatsapp"></span> Contáctame en WhatsApp<br></a></b>
+	    		  <span class="fa fa-mail-bulk"></span> jlserra@joseluisserra.com
+    		  </div>
 		  </form>
     </div>
     </section>
