--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="google-site-verification" content="hqQvGF_Tlcp3tnCUECUM6x8qVXIFKjen_LIIrU7fu5Y" />
   <meta name="description" content="">
   <meta name="author" content="">
 
