--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">José Luis Serra</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2 hovericon fade-in " src="img/logo_b.png" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2 hovericon fade-in " src="img/logo_b.png" alt="Logo">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,7 +80,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center section-home" id="home">
       <div class="w-100 w-100-home">
-      	<div class="serra-logo-container"><img src="img/logo.png" class="serra-logo logo-rotate"></img></div>
+      	<div class="serra-logo-container"><img src="img/logo.png" class="serra-logo logo-rotate" alt="Main logo"></img></div>
         <h1 class="mb-0 animate-text-1 title-serra center-text hover-shadow">José Luis Serra
           <span class="text-primary"></span>
         </h1>
@@ -88,9 +88,9 @@
           Desarrollo personal y empresarial
         </div>
         <div class="serra-icon-container fade-in center-element">
-        	<img src="img/1a.png" class="serra-icon hover-scale"></img>
-        	<img src="img/2a.png" class="serra-icon hover-scale"></img>
-        	<img src="img/3a.png" class="serra-icon hover-scale"></img>
+        	<img src="img/1a.png" class="serra-icon hover-scale" alt="Auditoría"></img>
+        	<img src="img/2a.png" class="serra-icon hover-scale" alt="Consultoría"></img>
+        	<img src="img/3a.png" class="serra-icon hover-scale" alt="Coaching"></img>
         </div> 
       </div>
     </section>
@@ -99,7 +99,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center section-about" id="about">
         <div class="w-100">
             <h2 class="mb-5 color-blue">Sobre mí</h2>
-            <div class="profile-pic-container"><img src="img/profile.jpg" class="profile-pic" title="José Luis Serra">
+            <div class="profile-pic-container"><img src="img/profile.jpg" class="profile-pic" title="José Luis Serra" alt="José Luis Serra">
             <br>José Luis Serra
             </div>
 			<div class="serra-column-70"><span class="color-black">Soy un ser humano como tú que ha vivido diferentes procesos de formación, de aprendizaje por experiencia, que sigue
@@ -261,7 +261,7 @@
     
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center section-consulting" id="consulting">
       <div class="w-100">
-        <div class="section-icon-container"><img alt="" src="img/2b.png" class="section-icon"></div>
+        <div class="section-icon-container"><img alt="" src="img/2b.png" class="section-icon" alt="Consultoría"></div>
       	<h2 class="color-blue">Consultoría</h2>
       	<span class="color-black">La consultoría se divide en dos vertientes: consultoría experta y consultoría de
 		procesos. En ambas el consultor aplica un <b>modelo o sistemática contrastada y
@@ -307,7 +307,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center section-coaching" id="coaching">
       <div class="w-100 color-black">
-        <div class="section-icon-container"><img alt="" src="img/3b.png" class="section-icon"></div>
+        <div class="section-icon-container"><img alt="" src="img/3b.png" class="section-icon" alt="Coaching"></div>
       	<h2 class="color-blue">Coaching</h2>
       	El Coaching es un proceso personalizado y confidencial que ayuda al coachee (cliente,
 		consultante) a:
@@ -496,7 +496,7 @@
 			</ul>
 			</div>
 			<div class="serra-column-32 iso-img">
-				<img src="img/iso.png">
+				<img src="img/iso.png" alt="ISO">
 				<div class="iso-text">Se pueden integrar dos o más sistemas según los intereses estratégicos de la organización.</div>
 			</div>
 		</div>
